tests/integration/snapshots/integration__conformance__n_object_missing_colon.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"a" b}
stderr ---
error: unexpected character `b`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a" b}
  |      ^
